Fix white space for status

--- a/src/apps/copilots/src/pages/copilot-opportunity-list/styles.module.scss
+++ b/src/apps/copilots/src/pages/copilot-opportunity-list/styles.module.scss
@@ -21,6 +21,7 @@
     font-weight: bold;
     padding: 4px 8px;
     border-radius: 4px;
+    white-space: nowrap;
     display: inline-block;
     text-transform: capitalize;
 }
